# Multiplatform-Mmap-IO

./: .gitignore  CMakeLists.txt  README.md  fio.hpp  mio.hpp  mmapio.hpp  test.cpp
MultiplatformMmapIO/: CMakeLists.txt  MultiplatformMmapIO.sln
MultiplatformMmapIO/Include/: mio.hpp  mmapio.hpp
MultiplatformMmapIO/MultiplatformMmapIO/: MultiplatformMmapIO.cpp  MultiplatformMmapIO.vcxproj  MultiplatformMmapIO.vcxproj.filters
